update #clock-time font size Pomodoro Clock (with React + Redux)

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,10 @@
     flex-direction: row;
 }
 
+#clock-time{
+    font-size: xx-large;
+}
+
 .buttons-panel-buttons {
     background-repeat: no-repeat;
     background-position: left;
