--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
-html{
+html {
     height: 100%;
+    padding: 10%;
+    background-color: black;
+    overflow-y: hidden;
 }
 
 body {
-    height: 100%;
+    height: 70%;
+
+    background: darkgray;
 
     margin: 0;
     padding: 0;
