--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,33 @@
-.App {
+.container-session {
+    padding: 10%;
+    margin: 15%;
+    border: darkgray 5px solid;
+    border-radius: 10%;
+
+    background-color: white;
+
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.ClocksList {
+    padding: 10%;
+    margin: 10%;
+
+    border: darkgray 5px solid;
+    border-radius: 10%;
+
+    color: white;
+    background-color: black;
+
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
 }
 
 .App-logo {
