--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .container-session {
     padding: 10%;
-    margin: 15%;
-    border: darkgray 5px solid;
-    border-radius: 10%;
+    /*margin: 15%;*/
+    /*border: darkgray 5px solid;*/
+    /*border-radius: 5%;*/
 
-    background-color: white;
+    /*background-color: white;*/
 
     text-align: center;
     display: flex;
@@ -14,14 +14,15 @@
 }
 
 .ClocksList {
-    padding: 10%;
-    margin: 10%;
+    padding: 5%;
+    /*margin: 10%;*/
 
     border: darkgray 5px solid;
-    border-radius: 10%;
+    border-radius: 3%;
 
-    color: white;
-    background-color: black;
+    /*color: white;*/
+    /*background-color: #777;*/
+    background: aliceblue;
 
     text-align: center;
     display: flex;
