--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,16 @@ body {
     width: 70%;
 
     border: darkgray 5px solid;
-    border-radius: 10%;
+    border-radius: 3%;
 
-    background: aliceblue;
+    background: white;
 
     margin: 0;
     padding: 0;
     font-family: sans-serif;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: block;
+    /*display: flex;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
 }
