--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
 .container-session {
     padding: 10%;
-    /*margin: 15%;*/
-    /*border: darkgray 5px solid;*/
-    /*border-radius: 5%;*/
-
-    /*background-color: white;*/
 
     text-align: center;
     display: flex;
@@ -15,13 +10,10 @@
 
 .ClocksList {
     padding: 5%;
-    /*margin: 10%;*/
 
     border: darkgray 5px solid;
     border-radius: 3%;
 
-    /*color: white;*/
-    /*background-color: #777;*/
     background: aliceblue;
 
     text-align: center;
@@ -78,7 +70,7 @@
     margin: 16px;
 }
 
-/* Icon found by: https://www.iconfinder.com/*/
+/* Icon found at: https://www.iconfinder.com/*/
 
 /* Source: https://www.iconfinder.com/icons/326581/circle_fill_play_icon#size=128 */
 /*noinspection CssOptimizeSimilarProperties*/
