passed props.isCurrent to <Clock/> in ClocksList.js; added style for .Clock-current Pomodoro Clock (with React + Redux)

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,10 @@
     border: darkgray 5px solid;
 }
 
+.Clock-current {
+    background-color: lemonchiffon !important;
+}
+
 .Clock form {
     margin: 5%;
 }
